--- a/templates/services/order_list.html
+++ b/templates/services/order_list.html
@@ -451,9 +451,9 @@
                                         </a></li>
                                         {% endif %}
                                         
-                                        <!-- Delete Order Option (for empty orders or confirmed orders without progress) -->
+                                        <!-- Delete Order Option (for empty orders, confirmed orders without progress, or cancelled orders) -->
                                         {% if user_role in 'owner,manager' %}
-                                            {% if order.status == 'confirmed' and not order.actual_start_time and not order.has_payments or not order.order_items.exists %}
+                                            {% if order.status == 'confirmed' and not order.actual_start_time and not order.has_payments or not order.order_items.exists or order.status == 'cancelled' %}
                                             <li><a class="dropdown-item text-danger" href="/business/{{ request.tenant.slug }}/services/orders/{{ order.pk }}/delete/">
                                                 <i class="fas fa-trash"></i> Delete Order
                                             </a></li>
