--- a/templates/services/invoice_preview.html
+++ b/templates/services/invoice_preview.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% load media_tags %}
 
 {% block title %}Invoice {{ invoice.invoice_number }} - {{ block.super }}{% endblock %}
 
@@ -220,7 +221,7 @@
                 <!-- Logo on left alone -->
                 <div class="col-md-3">
                     {% if tenant_settings.business_logo %}
-                    <img src="{{ tenant_settings.business_logo.url }}" alt="{{ tenant_settings.business_name }}" class="company-logo" style="max-height: 80px; width: auto;">
+                    <img src="{% media_url tenant_settings.business_logo %}" alt="{{ tenant_settings.business_name }}" class="company-logo" style="max-height: 80px; width: auto;">
                     {% endif %}
                 </div>
                 
