--- a/templates/services/quotation_print.html
+++ b/templates/services/quotation_print.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load media_tags %}
 {% load currency_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -355,7 +356,7 @@
                 <!-- Logo section on left -->
                 <div class="logo-section">
                     {% if tenant_settings.business_logo %}
-                    <img src="{{ tenant_settings.business_logo.url }}" alt="{{ business.name }} Logo" class="company-logo">
+                    <img src="{% media_url tenant_settings.business_logo %}" alt="{{ business.name }} Logo" class="company-logo">
                     {% elif tenant_settings.logo_url %}
                     <img src="{{ tenant_settings.logo_url }}" alt="{{ business.name }} Logo" class="company-logo">
                     {% endif %}
