--- a/templates/subscriptions/invoice_pdf.html
+++ b/templates/subscriptions/invoice_pdf.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% load media_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -276,7 +278,7 @@
                 <!-- Business Logo -->
                 {% if business.tenant_settings.business_logo %}
                 <div class="business-logo">
-                    <img src="{{ business.tenant_settings.business_logo.url }}" alt="AutoWash App Logo" class="logo-img">
+                    <img src="{% media_url business.tenant_settings.business_logo %}" alt="AutoWash App Logo" class="logo-img">
                 </div>
                 {% endif %}
                 
