--- a/templates/businesses/settings/business.html
+++ b/templates/businesses/settings/business.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% load media_tags %}
 
 {% block title %}Business Settings - {{ business.name }}{% endblock %}
 
@@ -277,7 +278,7 @@
                             {% endif %}
                             {% if tenant_settings.business_logo %}
                                 <div class="mt-2">
-                                    <img src="{{ tenant_settings.business_logo.url }}" alt="Current Logo" style="max-height: 60px; max-width: 150px;" class="border rounded">
+                                    <img src="{% media_url tenant_settings.business_logo %}" alt="Current Logo" style="max-height: 60px; max-width: 150px;" class="border rounded">
                                     <small class="d-block text-muted">Current logo</small>
                                 </div>
                             {% endif %}
