--- a/templates/services/quotation_print.html
+++ b/templates/services/quotation_print.html
@@ -1,6 +1,7 @@
 {% load static %}
 {% load media_tags %}
 {% load currency_tags %}
+{% load humanize %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -499,9 +500,9 @@
                             {% endif %}
                         </td>
                         <td class="qty-col">{{ item.quantity|floatformat:-2 }}</td>
-                        <td class="rate-col">{{ item.unit_price|floatformat:2 }}</td>
+                        <td class="rate-col">{{ item.unit_price|floatformat:2|intcomma }}</td>
                         <td class="discount-col">-</td>
-                        <td class="amount-col">{{ item.total_price|floatformat:2 }}</td>
+                        <td class="amount-col">{{ item.total_price|floatformat:2|intcomma }}</td>
                     </tr>
                     {% empty %}
                     <tr>
@@ -529,15 +530,15 @@
             <table class="totals-table">
                 <tr>
                     <td class="label">NET AMOUNT ({{ "1"|currency|slice:":2" }})</td>
-                    <td class="amount">{{ quotation.subtotal|floatformat:2 }}</td>
+                    <td class="amount">{{ quotation.subtotal|floatformat:2|intcomma }}</td>
                 </tr>
                 <tr>
                     <td class="label">VAT {{ quotation.tax_percentage|default:"16" }}%</td>
-                    <td class="amount">{{ quotation.tax_amount|floatformat:2 }}</td>
+                    <td class="amount">{{ quotation.tax_amount|floatformat:2|intcomma }}</td>
                 </tr>
                 <tr class="total-amount-row">
                     <td class="label">TOTAL AMOUNT ({{ "1"|currency|slice:":2" }})</td>
-                    <td class="amount">{{ quotation.total_amount|floatformat:2 }}</td>
+                    <td class="amount">{{ quotation.total_amount|floatformat:2|intcomma }}</td>
                 </tr>
             </table>
         </div>
