--- a/templates/services/invoice_preview.html
+++ b/templates/services/invoice_preview.html
@@ -1,6 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% load media_tags %}
+{% load humanize %}
 
 {% block title %}Invoice {{ invoice.invoice_number }} - {{ block.super }}{% endblock %}
 
@@ -351,14 +352,14 @@
                                 {% if item.type == 'customer_part' %}
                                 -
                                 {% else %}
-                                KES {{ item.unit_price|floatformat:2 }}
+                                KES {{ item.unit_price|floatformat:2|intcomma }}
                                 {% endif %}
                             </td>
                             <td class="text-right">
                                 {% if item.type == 'customer_part' %}
                                 -
                                 {% else %}
-                                KES {{ item.total_price|floatformat:2 }}
+                                KES {{ item.total_price|floatformat:2|intcomma }}
                                 {% endif %}
                             </td>
                         </tr>
@@ -376,21 +377,21 @@
                 <table>
                     <tr>
                         <td><strong>Subtotal:</strong></td>
-                        <td class="text-right">KES {{ invoice.subtotal|floatformat:2 }}</td>
+                        <td class="text-right">KES {{ invoice.subtotal|floatformat:2|intcomma }}</td>
                     </tr>
                     {% if invoice.discount_amount > 0 %}
                     <tr>
                         <td><strong>Discount:</strong></td>
-                        <td class="text-right">-KES {{ invoice.discount_amount|floatformat:2 }}</td>
+                        <td class="text-right">-KES {{ invoice.discount_amount|floatformat:2|intcomma }}</td>
                     </tr>
                     {% endif %}
                     <tr>
                         <td><strong>VAT (16%):</strong></td>
-                        <td class="text-right">KES {{ invoice.tax_amount|floatformat:2 }}</td>
+                        <td class="text-right">KES {{ invoice.tax_amount|floatformat:2|intcomma }}</td>
                     </tr>
                     <tr class="total-row">
                         <td><strong>Total Amount:</strong></td>
-                        <td class="text-right"><strong>KES {{ invoice.total_amount|floatformat:2 }}</strong></td>
+                        <td class="text-right"><strong>KES {{ invoice.total_amount|floatformat:2|intcomma }}</strong></td>
                     </tr>
                 </table>
             </div>
