--- a/templates/system_admin/sms/statistics.html
+++ b/templates/system_admin/sms/statistics.html
@@ -306,7 +306,7 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{% static 'js/chart.min.js' %}"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function() {
     // Messages Over Time Chart
