--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -41,16 +41,16 @@
     <meta name="msapplication-config" content="{% static 'browserconfig.xml' %}?v={% cache_buster %}">
     
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="{% static 'css/fontawesome.min.css' %}" rel="stylesheet">
     
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="{% static 'css/inter-fonts.css' %}" rel="stylesheet">
     
     <!-- AOS Animation -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="{% static 'css/aos.min.css' %}" rel="stylesheet">
     
     <!-- Main CSS -->
     <link href="{% static 'css/main.css' %}?v={% cache_buster %}" rel="stylesheet">
@@ -192,10 +192,10 @@
     {% endif %}
     
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
     
     <!-- Service Worker Cleanup (Remove old caches) -->
     <script src="{% static 'js/sw-cleanup.js' %}?v={% cache_buster %}"></script>
@@ -204,7 +204,7 @@
     <script src="{% static 'js/network-manager.js' %}?v={% cache_buster %}"></script>
     
     <!-- AOS Animation -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="{% static 'js/aos.min.js' %}"></script>
     
     <!-- Main JavaScript -->
     <script src="{% static 'js/main.js' %}?v={% cache_buster %}"></script>
