--- a/templates/services/package_form.html
+++ b/templates/services/package_form.html
@@ -161,7 +161,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+<script src="{% static 'js/fontawesome.min.js' %}"></script>
 <script>
 let selectedServices = [];
 
