--- a/templates/system_admin/analytics.html
+++ b/templates/system_admin/analytics.html
@@ -151,7 +151,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{% static 'js/chart.min.js' %}"></script>
 <script>
 // Business Growth Chart
 const businessGrowthData = {{ business_growth|safe }};
