--- a/templates/system_admin/performance_monitoring.html
+++ b/templates/system_admin/performance_monitoring.html
@@ -10,7 +10,7 @@
 
 {% block extra_js %}
 <!-- Chart.js for real-time charts -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="{% static 'js/chart.min.js' %}"></script>
 <!-- Performance monitoring JavaScript -->
 <script src="{% static 'js/performance_monitoring.js' %}"></script>
 
